# BOTM-web

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.sqlx/: query-088a7e0dcfa116c1f778a947a1e10c25e0e33c1d8f394149070b31729d89202c.json  query-7b1b8b942676778d8c7a52d9573c84ba387bf551c348319eb459115d7e58f27b.json  query-9838287f79cd4ca8d7e163b95826b454737dfe2b6241b72feacc4607d7f59bc7.json  query-a39a452d0473c4414078462c897b4c2372b1a011cb234ba39ad08fa247048698.json  query-e27910c0850936b4272bc28c533158daa880732ada60ec0c6b8f826b883e5722.json  query-e41f7eee2853271d5d59f4000b716eda22be224c8c837378e94d0ce3ec38d508.json
assets/css/: style.css
config/: base.yaml  local.yaml  prod.yaml
fly-log-shipper/: fly.toml
migrations/: 20230531114938_subscriber.sql  20230707225359_add_access_token.sql  20230708114604_infinty_expiry_timestamp_to_epoch.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telementery.rs
src/routes/: connect.rs  disconnect.rs  generate.rs  index.rs  mod.rs  not_found.rs  redirect.rs
src/spotify/: mod.rs
templates/: index.html
