[package]
name = "botm_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-files = "0.6.2"
actix-ip-filter = "0.3.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
anyhow = "1.0.71"
askama = { version = "0.12.0", features = ["with-actix-web"], default-features = false }
askama_actix = "0.14.0"
base64 = "0.21.2"
config = "0.13.3"
serde = { version = "1.0.163", features = ["derive"] }
serde-aux = "4.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate" ] }
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.4"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.7"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
tracing-log = "0.1.3"
oauth2 = "4.4.0"
url = "2.3.1"
simple_logger = "4.1"
dotenvy = "0.15.7"
chrono = "0.4.26"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "botm_web"
